[tool.poetry]
name = "n105-readerboard"
version = "0.1.0"
description = ""
authors = ["Hundredvisionsguy <winikkc@hsd.k12.or.us>"]
readme = "README.md"
packages = [{include = "n105_readerboard"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
